Miscellaneous fixes
* Consistent capitalization in the Studio editor
* Remove dangerous recommendation to delete from the top of the editor
* Stop large images from overflowing feedback popups in Studio

--- a/drag_and_drop_v2/public/css/drag_and_drop.css
+++ b/drag_and_drop_v2/public/css/drag_and_drop.css
@@ -396,6 +396,10 @@
     font-size: 14px;
 }
 
+.xblock--drag-and-drop .popup .popup-content img {
+    max-width: 100%;
+}
+
 .xblock--drag-and-drop .popup .close-feedback-popup-button {
     cursor: pointer;
     margin-top: 8px;
